@@ -252,10 +252,11 @@ class AppendSlashNotFoundViewFactory(object):
     .. deprecated:: 1.3
 
     """
-    def __init__(self, notfound_view=None):
+    def __init__(self, notfound_view=None, redirect_class=HTTPFound):
         if notfound_view is None:
             notfound_view = default_exceptionresponse_view
         self.notfound_view = notfound_view
+        self.redirect_class = redirect_class
 
     def __call__(self, context, request):
         path = decode_path_info(request.environ['PATH_INFO'] or '/')
@@ -268,7 +269,7 @@ class AppendSlashNotFoundViewFactory(object):
                     qs = request.query_string
                     if qs:
                         qs = '?' + qs
-                    return HTTPFound(location=request.path+'/'+qs)
+                    return self.redirect_class(location=request.path+'/'+qs)
         return self.notfound_view(context, request)
 
 append_slash_notfound_view = AppendSlashNotFoundViewFactory()
